--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-    background-color: rgb(241,242,247);
+body {
+  background-color: #f1f2f7;
 }
+/*# sourceMappingURL=styles.css.map */
