--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 body{
-    background-color: rgb(241,242,247);
+    background-color: rgb(241,242,246);
 }
