--- a/src/app/addbutton/addbutton.component.css
+++ b/src/app/addbutton/addbutton.component.css
@@ -1,13 +1,20 @@
-.floatingButtonWrap {
+.show.modal {
   display: block;
-  position: fixed;
-  bottom: 45px;
-  right: 45px;
-  z-index: 999999999;
 }
 
-.floatingButton {
-  display: block;
+.addbtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 20px;
+  font-size: x-large;
+  position: fixed !important;
   width: 60px;
   height: 60px;
   text-align: center;
@@ -25,25 +32,16 @@
   transition: all 0.4s;
 }
 
-.categories {
-  position: relative;
-  top: -100vh;
-  height: 100vh;
-  width: 100%;
-}
-
 .categories button {
-  width: 400px;
+  margin-left: 5px;
+  width: 111px;
   height: 60px;
   border-radius: 20px;
   border: 0;
   margin-bottom: 20px;
 }
 
-.date {
-  position: fixed;
-  top: 5%;
-  left: 40%;
-  height: 100vh;
+.changecolor {
+  background-color: #0c6efd;
 }
 /*# sourceMappingURL=addbutton.component.css.map */
