--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -1,5 +1,65 @@
 .list{
-  height: 100vh;
+  height: 93vh;
   width: 100%;
-  filter: blur(10px);
+display: flex;
+justify-content: center;
+align-items: center;
 }
+li{
+  width: 600px;
+  height: 80px;
+  list-style: none;
+  border-radius: 10px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 1px 1px 1px 1px  #bcbcbc;
+}
+.left{
+  display: flex;
+  align-items: center;
+.icon{
+  margin-left: 20px;
+}
+.category{
+  margin-left: 20px;
+.expenselist{
+  font-size: x-large;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  color: rgb(25, 25, 25);
+}
+.description{
+  margin-top: 0;
+  padding-top: 0;
+  font-size: small;
+  color: rgb(152,157,170);
+}
+}
+}
+.right{
+  display: flex;
+  font-size: x-large;
+.money{
+  margin-right: 30px;
+
+
+}
+.cancel{
+  margin-right: 10px;
+}
+.edit{
+  margin-right: 20px;
+  button{
+    background-color: rgb(221,236,253);
+    border: 0;
+    border-radius: 10px;
+  i{
+    color: rgb(56,139,228);
+  }
+  }
+}
+}
+
